hero span fix color contrast

--- a/src/style/_hero.scss
+++ b/src/style/_hero.scss
@@ -11,7 +11,7 @@
         color: $dark-gray;
 
         span {
-            color: $green;
+            color: #038268;
         }
     }
 
