--- a/src/style/general.css
+++ b/src/style/general.css
@@ -158,7 +158,7 @@ img {
   color: #333;
 }
 .hero--container .hero--heading span {
-  color: #04ddb2;
+  color: #038268;
 }
 .hero--container .hero--description {
   font-size: 1.125rem;
